--- a/scss/blocks/_promo.scss
+++ b/scss/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
     min-height: 650px;
     padding-top: 22px;
-    background: url(../../img/1st-screen-bg.png) center (center/cover) no-repeat;
+    background: url(../img/1st-screen-bg.png) center (center/cover) no-repeat;
     
     &__wrapper {
         display: flex;
