--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -13,3 +13,9 @@
         color: #FFFFFF;
     }
 }
+
+.consulation-subheader {
+    font-size: 36px;
+    text-align: left;
+    line-height: 54px;
+}
