--- a/scss/blocks/_buttons.scss
+++ b/scss/blocks/_buttons.scss
@@ -4,6 +4,7 @@
     background: #C70101;
     border-radius: 5px;
     border: none;
+    cursor: pointer;
 
     font-weight: 500;
     font-size: 12px;
@@ -13,6 +14,12 @@
     &_main {
         width: 300px;
         height: 50px;
+        font-size: 16px;
+    }
+    &_submit {
+        width: 100%;
+        height: 55px;
+        color: #fff;
         font-size: 16px;
     }
 }
