--- a/scss/blocks/_feautures.scss
+++ b/scss/blocks/_feautures.scss
@@ -3,7 +3,7 @@
     background-color: #F6F6F6;
 
     .container {
-        padding: 70px 0;
+        padding: 70px 30px;
 
         .subheader-2 {
             text-align: center;
