--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -19,3 +19,27 @@
     text-align: left;
     line-height: 54px;
 }
+
+@media (max-width: 525px) {
+    .subheader-2 {
+        font-weight: 700;
+        font-size: 28px;
+        line-height: 30px;
+        text-transform: uppercase;
+        margin: 0;
+    
+        &_black {
+            color: #0D0D0D;
+        }
+    
+        &_white {
+            color: #FFFFFF;
+        }
+    }
+
+    .consulation-subheader {
+        font-size: 28px;
+        text-align: left;
+        line-height: 30px;
+    }
+}
