--- a/scss/blocks/_consultation.scss
+++ b/scss/blocks/_consultation.scss
@@ -1,6 +1,6 @@
 .consultation {
     min-height: 680px;
-    padding: 100px 0 92px 0;
+    padding: 100px 30px 92px 30px;
     background: url('../../img/form-bg.png') center (center/cover) no-repeat;
 
     &__descr {
@@ -9,3 +9,11 @@
         color: #FFFFFF;
     }
 }
+
+@media (max-width: 525px) {
+    .consultation {
+        min-height: 540px;
+        padding: 60px 30px 42px 30px;
+    }
+}
+
