--- a/scss/blocks/_forms.scss
+++ b/scss/blocks/_forms.scss
@@ -1,5 +1,5 @@
 .feed-form {
-    width: 300px;
+    max-width: 300px;
     margin-top: 36px;
     display: flex;
     flex-direction: column;
@@ -18,3 +18,26 @@
         }
     }
 }
+
+// @media (max-width: 360px) {
+//     .feed-form {
+//         width: 300px;
+//         margin-top: 36px;
+//         display: flex;
+//         flex-direction: column;
+//         input {
+//             height: 50px;
+//             border-radius: 5px;
+//             border-color: #FFFFFF;
+//             margin-bottom: 15px;
+//             border: none;
+//             padding: 0 20px;
+//             font-weight: 400;
+//             font-size: 14px;
+//             color: #4B4B4B;
+//             &:nth-child(3) {
+//                 margin-bottom: 20px;
+//             }
+//         }
+//     }
+// }
