--- a/scss/blocks/_promo.scss
+++ b/scss/blocks/_promo.scss
@@ -1,6 +1,6 @@
 .promo {
     min-height: 650px;
-    padding-top: 22px;
+    padding: 22px 30px 0 30px;
     background: url(../img/1st-screen-bg.png) center (center/cover) no-repeat;
     
     &__wrapper {
