--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,3 +19,5 @@
 @import 'blocks/feautures';
 @import 'blocks/consultation';
 @import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
